--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   link: /
   icon: house
 - name: Parlør
-  link: /parloer
+  link: /parloer.html
   icon: comments
 - name: Kursus
   link: /kursus
