--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,12 @@ baseurl: "parloerapp"
 url: "https://kasperdyrvig.github.io"
 
 collections:
+  dictionary:
   grupper:
     output: true
   parloer:
+    output: true
+  lektioner:
+    output: true
+  moduler:
     output: true
