--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ url: https://kasperdyrvig.github.io
 
 collections:
   phrases:
+  paasiviuk_introductions:
+  paasiviuk_teachernotes:
+  paasiviuk_studynotes:
